[package]
name = "firefox-launcher"
version = "0.1.15"
authors = ["susurri <susurrus.silent@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"

[dependencies]
procfs = { version = "0.16", default-features = false }
rust-ini = "0.20"
rustyline = "13.0"
x11rb = "0.13"
xdg = "2.5.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
libc = "0.2"
nix = { version = "0.27", features = ["fs", "signal"] }
strum = "0.26"
strum_macros = "0.26"
