[package]
name = "firefox-launcher"
version = "0.1.20"
authors = ["susurri <susurrus.silent@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"

[dependencies]
procfs = { version = "0.16", default-features = false }
rust-ini = "0.21"
rustyline = "14.0"
x11rb = "0.13"
xdg = "2.5.2"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "signal"] }
strum = "0.26"
strum_macros = "0.26"
